Conflict graph framework

--- a/ConvexHull/CMakeLists.txt
+++ b/ConvexHull/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.9)
-project(localCH)
+project(GrowArray)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(main.cpp ConflictGraph.h Point.h Point.cpp Facet.h Facet.cpp)
+add_executable(ConvexHull main.cpp ConflictGraph.h Point.h Point.cpp Facet.h Facet.cpp)
